[gd_scene load_steps=5 format=3 uid="uid://cx4kwdcn8ymig"]

[ext_resource type="PackedScene" uid="uid://hqcychtuc805" path="res://Game/Characters/unit_base.tscn" id="1_su1ee"]
[ext_resource type="Script" path="res://Game/Characters/Friendlies/player_unit.gd" id="2_pcb3j"]
[ext_resource type="PackedScene" uid="uid://7upsmtrof85o" path="res://Game/UI/action_select.tscn" id="4_4dehy"]
[ext_resource type="Texture2D" uid="uid://c4s0q7ybhh3x2" path="res://Assets/Characters/Friendly/HeikoSpirit.png" id="4_ptio3"]

[node name="PlayerUnit" groups=["player"] instance=ExtResource("1_su1ee")]
y_sort_enabled = false
script = ExtResource("2_pcb3j")
skin = ExtResource("4_ptio3")

[node name="Sprite" parent="PathFollow2D" index="1"]
y_sort_enabled = false
frame = 0

[node name="action_select" parent="." index="2" instance=ExtResource("4_4dehy")]
visible = false

[connection signal="attack_chosen" from="action_select" to="." method="_on_action_select_attack_chosen"]
[connection signal="attack_selected" from="action_select" to="." method="_on_action_select_attack_selected"]
[connection signal="move_selected" from="action_select" to="." method="_on_action_select_move_selected"]
[connection signal="skip_selected" from="action_select" to="." method="_on_action_select_skip_selected"]
